# lab6

./: CMakeLists.txt  CPack.cmake
.github/workflows/: CI.yml  CI_Windows.yml  CI_package.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
